--- a/index.html
+++ b/index.html
@@ -3,11 +3,173 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/normalize.css"></link>
+  <link rel="stylesheet" href="./styles/style.css"></link>
   <title>Научиться учиться</title>
 </head>
-<body>
-  <div class="page">
+  <body>
+    <div class="page">
 
-  </div>
-</body>
+      <!-- Header block -->
+      <header class="header">
+        <img class="logo logo__place_header" src="./images/logo_place_header.svg" alt="logo">
+        <h1 class="header__title">Научиться учиться</h1>
+        <section class="header__subtitle">
+          <p>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Учиться →</a></p>
+        </section>
+        <img class="header__main-illustration" src="./images/two_again.png" alt="two_again"></img>
+        <div class="header__square-pic"></div>
+      </header>
+    
+      <!-- Main content -->
+      <main class="main">
+  
+        <!-- Description block -->
+        <section class="description">
+          <div class="two-columns">
+            <p class="two-columns__brief">Главные проблемы в обучении</p>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. 
+                Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, 
+                но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+              <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, 
+                но почему-то этому мало где учат. Что с этим делать?</p>
+              <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, 
+                сделать его эффективным и захватывающим. 
+                Эти же техники применяются на примере обучения в Практикуме.</p>
+            </div>
+          </div>
+        </section>
+  
+        <!-- Digits block -->
+        <section class="digits">
+          <h1 class="section-title">Цифры и факты</h1>
+          <h2 class="section-subtitle">Про учёбу и мозг</h2>
+          <div class="table digits__table">
+            <div class="table__cell">
+              <h3 class="table__heading">86 миллиардов</h3>
+              <p class="table__text">Число нейронов в мозге человека</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">2.1 миллиарда</h3>
+              <p class="table__text">Число нуждающихся в повышении квалификации</p> 
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">1000 терабайт</h3>
+              <p class="table__text">Объём памяти человека</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">500 триллионов</h3>
+              <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">420 миллионов</h3>
+              <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">17–20 лет</h3>
+              <p class="table__text">Пик обучаемости</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">1885 год</h3>
+              <p class="table__text">Открытие кривой забывания</p>
+            </div>
+            <div class="table__cell">
+              <h3 class="table__heading">1889 год</h3>
+              <p class="table__text">Открытие условного рефлекса</p>
+            </div>
+          </div>
+        </section>
+  
+        <!-- Feynman block -->
+        <section class="feynman">
+          <h1 class="feynman__title">Метод Фейнмана</h1>
+          <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
+          <a class="feynman__link" href="#">Подробнее →</a>
+          <img class="feynman__main-illustration" src="./images/feynman.png" alt="feynman"></img>
+        </section>
+  
+        <!-- Kaufman block -->
+        <section class="kaufman ">
+          <h1 class="section-title ">Принципы обучения</h1>
+          <h2 class="section-subtitle ">от Джоша Кауфмана</h2>
+          <div class="kaufman__triangle-pic"></div>
+          <div class="table table_cell_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">1</h3>
+              <p class="table__text">Число нейронов в мозге человека</з>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">2</h3>
+              <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">3</h3>
+              <p class="table__text">Определите целевой уровень мастерства.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">4</h3>
+              <p class="table__text">Разбейте навык на элементы.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">5</h3>
+              <p class="table__text">Приготовьте всё необходимое для занятий.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">6</h3>
+              <p class="table__text">Устраните препятствия для занятий.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">7</h3>
+              <p class="table__text">Выделите специальное время для занятий.</p>
+            </div>
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">8</h3>
+              <p class="table__text">Создайте быстрые петли обратной связи.</p>
+            </div> 
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">9</h3>
+              <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            </div> 
+            <div class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading">10</h3>
+              <p class="table__text">Уделяйте внимание количеству и скорости.</p>
+            </div>
+          </div>
+        </section>
+      </main>
+      <!-- Footer block -->
+        <section class="footer">
+          <div class="footer__columns">
+            <div class="footer__column footer__column_content-copyright">
+                <img class="logo logo_place_footer" src="./images/logo_place_footer.svg"></img>
+                <div class="footer__author">&copy Виктор Абанькин</div>
+            </div>
+            <div class="footer__column footer__column_content-info">
+                <h3 class="footer__column-heading"> О Практикуме </h3>
+                <ul class="footer__column-links">
+                    <li> <a class="footer__column-links" href="#" target="_blank">Главная</a></li>
+                    <li> <a class="footer__column-links" href="#" target="_blank">Концепция</a></li>
+                    <li><a class="footer__column-links" href="#" target="_blank">Наставники</a></li>
+                </ul>
+            </div>
+            <div class="footer__column footer__column_content-social">
+                    <h3 class="footer__column-heading"> Соцсети</h3>
+                    <ul class="footer__column-links">
+                        <li><a class="footer__social-icons" href="https://www.youtube.com/@YandexPracticum" target="_blank">
+                          <img class="footer__social-icons" src="./images/youtube-icon.svg" alt="YouTube"> YouTube</a>
+                        </li>
+                        <li><a class="footer__social-icons" href="https://vk.com/yandex.practicum" target="_blank">
+                          <img class="footer__social-icons" src="./images/vk_color_white.svg" alt="VK"> ВКонтакте</a>
+                        </li>
+                        <li><a class="footer__social-icons" href="https://www.tiktok.com/discover/%D1%8F%D0%BD%D0%B4%D0%B5%D0%BA%D1%81-%D0%BF%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D1%83%D0%BC" target="_blank">
+                          <img class="footer__social-icons" src="./images/tiktok-icon.svg" alt="TikTok"> TikTok</a>
+                        </li>
+                    </ul>
+            </div>
+          </div>
+        </section>
+  </body>
 </html>
