--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/normalize.css"></link>
-  <link rel="stylesheet" href="./styles/style.css"></link>
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
   <body>
     <div class="page">
-
+      
       <!-- Header block -->
       <header class="header">
         <img class="logo logo__place_header" src="./images/logo_place_header.svg" alt="logo">
         <h1 class="header__title">Научиться учиться</h1>
-        <section class="header__subtitle">
+        <div class="header__subtitle">
           <p>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Учиться →</a></p>
-        </section>
-        <img class="header__main-illustration" src="./images/two_again.png" alt="two_again"></img>
+        </div>
+        <img class="header__main-illustration" src="./images/two_again.png" alt="two_again">
         <div class="header__square-pic"></div>
       </header>
     
@@ -27,7 +27,7 @@
         <!-- Description block -->
         <section class="description">
           <div class="two-columns">
-            <p class="two-columns__brief">Главные проблемы в обучении</p>
+            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. 
                 Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, 
@@ -43,41 +43,41 @@
   
         <!-- Digits block -->
         <section class="digits">
-          <h1 class="section-title">Цифры и факты</h1>
-          <h2 class="section-subtitle">Про учёбу и мозг</h2>
+          <h2 class="section-title">Цифры и факты</h2>
+          <h3 class="section-subtitle">Про учёбу и мозг</h3>
           <div class="table digits__table">
             <div class="table__cell">
-              <h3 class="table__heading">86 миллиардов</h3>
+              <h4 class="table__heading">86 миллиардов</h4>
               <p class="table__text">Число нейронов в мозге человека</p>
             </div>
             <div class="table__cell">
-              <h3 class="table__heading">2.1 миллиарда</h3>
+              <h4 class="table__heading">2.1 миллиарда</h4>
               <p class="table__text">Число нуждающихся в повышении квалификации</p> 
               <p class="table__text">Всемирный Банк, 2017</p>
             </div>
             <div class="table__cell">
-              <h3 class="table__heading">1000 терабайт</h3>
+              <h4 class="table__heading">1000 терабайт</h4>
               <p class="table__text">Объём памяти человека</p>
             </div>
             <div class="table__cell">
-              <h3 class="table__heading">500 триллионов</h3>
+              <h4 class="table__heading">500 триллионов</h4>
               <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
             </div>
             <div class="table__cell">
-              <h3 class="table__heading">420 миллионов</h3>
+              <h4 class="table__heading">420 миллионов</h4>
               <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
               <p class="table__text">Всемирный Банк, 2017</p>
             </div>
             <div class="table__cell">
-              <h3 class="table__heading">17–20 лет</h3>
+              <h4 class="table__heading">17–20 лет</h4>
               <p class="table__text">Пик обучаемости</p>
             </div>
             <div class="table__cell">
-              <h3 class="table__heading">1885 год</h3>
+              <h4 class="table__heading">1885 год</h4>
               <p class="table__text">Открытие кривой забывания</p>
             </div>
             <div class="table__cell">
-              <h3 class="table__heading">1889 год</h3>
+              <h4 class="table__heading">1889 год</h4>
               <p class="table__text">Открытие условного рефлекса</p>
             </div>
           </div>
@@ -85,56 +85,56 @@
   
         <!-- Feynman block -->
         <section class="feynman">
-          <h1 class="feynman__title">Метод Фейнмана</h1>
-          <h2 class="feynman__subtitle">Выучить и не забыть.</h2>
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
           <a class="feynman__link" href="#">Подробнее →</a>
-          <img class="feynman__main-illustration" src="./images/feynman.png" alt="feynman"></img>
+          <img class="feynman__main-illustration" src="./images/feynman.png" alt="feynman">
         </section>
   
         <!-- Kaufman block -->
         <section class="kaufman ">
-          <h1 class="section-title ">Принципы обучения</h1>
-          <h2 class="section-subtitle ">от Джоша Кауфмана</h2>
+          <h2 class="section-title ">Принципы обучения</h2>
+          <h3 class="section-subtitle ">от Джоша Кауфмана</h3>
           <div class="kaufman__triangle-pic"></div>
           <div class="table table_cell_theme_dark">
             <div class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">1</h3>
-              <p class="table__text">Число нейронов в мозге человека</з>
+              <h4 class="table__heading">1</h4>
+              <p class="table__text">Число нейронов в мозге человека</p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">2</h3>
+              <h4 class="table__heading">2</h4>
               <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">3</h3>
+              <h4 class="table__heading">3</h4>
               <p class="table__text">Определите целевой уровень мастерства.</p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">4</h3>
+              <h4 class="table__heading">4</h4>
               <p class="table__text">Разбейте навык на элементы.</p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">5</h3>
+              <h4 class="table__heading">5</h4>
               <p class="table__text">Приготовьте всё необходимое для занятий.</p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">6</h3>
+              <h4 class="table__heading">6</h4>
               <p class="table__text">Устраните препятствия для занятий.</p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">7</h3>
+              <h4 class="table__heading">7</h4>
               <p class="table__text">Выделите специальное время для занятий.</p>
             </div>
             <div class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">8</h3>
+              <h4 class="table__heading">8</h4>
               <p class="table__text">Создайте быстрые петли обратной связи.</p>
             </div> 
             <div class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">9</h3>
+              <h4 class="table__heading">9</h4>
               <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
             </div> 
             <div class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">10</h3>
+              <h4 class="table__heading">10</h4>
               <p class="table__text">Уделяйте внимание количеству и скорости.</p>
             </div>
           </div>
@@ -144,11 +144,11 @@
         <section class="footer">
           <div class="footer__columns">
             <div class="footer__column footer__column_content-copyright">
-                <img class="logo logo_place_footer" src="./images/logo_place_footer.svg"></img>
-                <div class="footer__author">&copy Виктор Абанькин</div>
+                <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="logo_footer">
+                <div class="footer__author">&copy; Виктор Абанькин</div>
             </div>
             <div class="footer__column footer__column_content-info">
-                <h3 class="footer__column-heading"> О Практикуме </h3>
+                <h4 class="footer__column-heading"> О Практикуме </h4>
                 <ul class="footer__column-links">
                     <li> <a class="footer__column-links" href="#" target="_blank">Главная</a></li>
                     <li> <a class="footer__column-links" href="#" target="_blank">Концепция</a></li>
@@ -156,7 +156,7 @@
                 </ul>
             </div>
             <div class="footer__column footer__column_content-social">
-                    <h3 class="footer__column-heading"> Соцсети</h3>
+                    <h4 class="footer__column-heading"> Соцсети</h4>
                     <ul class="footer__column-links">
                         <li><a class="footer__social-icons" href="https://www.youtube.com/@YandexPracticum" target="_blank">
                           <img class="footer__social-icons" src="./images/youtube-icon.svg" alt="YouTube"> YouTube</a>
@@ -171,5 +171,6 @@
             </div>
           </div>
         </section>
+    </div>
   </body>
 </html>
