--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       
       <!-- Header block -->
       <header class="header">
-        <img class="logo logo__place_header" src="./images/logo_place_header.svg" alt="logo">
+        <img class="logo logo__place_header" src="./images/logo_place_header.svg" alt="Верхний логотип">
         <h1 class="header__title">Научиться учиться</h1>
         <div class="header__subtitle">
           <p>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Учиться →</a></p>
         </div>
-        <img class="header__main-illustration" src="./images/two_again.png" alt="two_again">
+        <img class="header__main-illustration" src="./images/two_again.png" alt="Опять двойка">
         <div class="header__square-pic"></div>
       </header>
     
@@ -88,7 +88,7 @@
           <h2 class="feynman__title">Метод Фейнмана</h2>
           <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
           <a class="feynman__link" href="#">Подробнее →</a>
-          <img class="feynman__main-illustration" src="./images/feynman.png" alt="feynman">
+          <img class="feynman__main-illustration" src="./images/feynman.png" alt="Фейнман">
         </section>
   
         <!-- Kaufman block -->
@@ -144,7 +144,7 @@
         <section class="footer">
           <div class="footer__columns">
             <div class="footer__column footer__column_content-copyright">
-                <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="logo_footer">
+                <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип нижний">
                 <div class="footer__author">&copy; Виктор Абанькин</div>
             </div>
             <div class="footer__column footer__column_content-info">
@@ -159,13 +159,13 @@
                     <h4 class="footer__column-heading"> Соцсети</h4>
                     <ul class="footer__column-links">
                         <li><a class="footer__social-icons" href="https://www.youtube.com/@YandexPracticum" target="_blank">
-                          <img class="footer__social-icons" src="./images/youtube-icon.svg" alt="YouTube"> YouTube</a>
+                          <img class="footer__social-icons" src="./images/youtube-icon.svg" alt="Ютуб"> YouTube</a>
                         </li>
                         <li><a class="footer__social-icons" href="https://vk.com/yandex.practicum" target="_blank">
-                          <img class="footer__social-icons" src="./images/vk_color_white.svg" alt="VK"> ВКонтакте</a>
+                          <img class="footer__social-icons" src="./images/vk_color_white.svg" alt="Вконтакте"> ВКонтакте</a>
                         </li>
                         <li><a class="footer__social-icons" href="https://www.tiktok.com/discover/%D1%8F%D0%BD%D0%B4%D0%B5%D0%BA%D1%81-%D0%BF%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D1%83%D0%BC" target="_blank">
-                          <img class="footer__social-icons" src="./images/tiktok-icon.svg" alt="TikTok"> TikTok</a>
+                          <img class="footer__social-icons" src="./images/tiktok-icon.svg" alt="ТикТок"> TikTok</a>
                         </li>
                     </ul>
             </div>
