--- a/index.html
+++ b/index.html
@@ -12,21 +12,19 @@
       
       <!-- Header block -->
       <header class="header">
-        <img class="logo logo__place_header" src="./images/logo_place_header.svg" alt="Верхний логотип">
+        <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Верхний логотип">
         <h1 class="header__title">Научиться учиться</h1>
-        <div class="header__subtitle">
-          <p>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Учиться →</a></p>
-        </div>
+        <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Учиться →</a></p>
         <img class="header__main-illustration" src="./images/two_again.png" alt="Опять двойка">
         <div class="header__square-pic"></div>
       </header>
     
       <!-- Main content -->
-      <main class="main">
+      <main class="content">
   
         <!-- Description block -->
-        <section class="description">
-          <div class="two-columns">
+        <section class="description" aria-label="две колонки">
+          <article class="two-columns">
             <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. 
@@ -38,14 +36,14 @@
                 сделать его эффективным и захватывающим. 
                 Эти же техники применяются на примере обучения в Практикуме.</p>
             </div>
-          </div>
+          </article>
         </section>
   
         <!-- Digits block -->
         <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
-          <h3 class="section-subtitle">Про учёбу и мозг</h3>
-          <div class="table digits__table">
+          <p class="section-subtitle">Про учёбу и мозг</p>
+          <div class="table">
             <div class="table__cell">
               <h4 class="table__heading">86 миллиардов</h4>
               <p class="table__text">Число нейронов в мозге человека</p>
@@ -86,7 +84,7 @@
         <!-- Feynman block -->
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
-          <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
           <a class="feynman__link" href="#">Подробнее →</a>
           <img class="feynman__main-illustration" src="./images/feynman.png" alt="Фейнман">
         </section>
@@ -94,46 +92,46 @@
         <!-- Kaufman block -->
         <section class="kaufman ">
           <h2 class="section-title ">Принципы обучения</h2>
-          <h3 class="section-subtitle ">от Джоша Кауфмана</h3>
-          <div class="kaufman__triangle-pic"></div>
-          <div class="table table_cell_theme_dark">
-            <div class="table__cell table__cell_theme_dark">
+          <p class="section-subtitle ">от Джоша Кауфмана</p>
+          <div class="kaufman__triangle"></div>
+          <div class="table">
+            <div class="table__cell table_theme_dark">
               <h4 class="table__heading">1</h4>
               <p class="table__text">Число нейронов в мозге человека</p>
             </div>
-            <div class="table__cell table__cell_theme_dark">
+            <div class="table__cell table_theme_dark">
               <h4 class="table__heading">2</h4>
               <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
             </div>
-            <div class="table__cell table__cell_theme_dark">
+            <div class="table__cell table_theme_dark">
               <h4 class="table__heading">3</h4>
               <p class="table__text">Определите целевой уровень мастерства.</p>
             </div>
-            <div class="table__cell table__cell_theme_dark">
+            <div class="table__cell table_theme_dark">
               <h4 class="table__heading">4</h4>
               <p class="table__text">Разбейте навык на элементы.</p>
             </div>
-            <div class="table__cell table__cell_theme_dark">
+            <div class="table__cell table_theme_dark">
               <h4 class="table__heading">5</h4>
               <p class="table__text">Приготовьте всё необходимое для занятий.</p>
             </div>
-            <div class="table__cell table__cell_theme_dark">
+            <div class="table__cell table_theme_dark">
               <h4 class="table__heading">6</h4>
               <p class="table__text">Устраните препятствия для занятий.</p>
             </div>
-            <div class="table__cell table__cell_theme_dark">
+            <div class="table__cell table_theme_dark">
               <h4 class="table__heading">7</h4>
               <p class="table__text">Выделите специальное время для занятий.</p>
             </div>
-            <div class="table__cell table__cell_theme_dark">
+            <div class="table__cell table_theme_dark">
               <h4 class="table__heading">8</h4>
               <p class="table__text">Создайте быстрые петли обратной связи.</p>
             </div> 
-            <div class="table__cell table__cell_theme_dark">
+            <div class="table__cell table_theme_dark">
               <h4 class="table__heading">9</h4>
               <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
             </div> 
-            <div class="table__cell table__cell_theme_dark">
+            <div class="table__cell table_theme_dark">
               <h4 class="table__heading">10</h4>
               <p class="table__text">Уделяйте внимание количеству и скорости.</p>
             </div>
@@ -141,36 +139,36 @@
         </section>
       </main>
       <!-- Footer block -->
-        <section class="footer">
+        <footer class="footer">
           <div class="footer__columns">
-            <div class="footer__column footer__column_content-copyright">
+            <div class="footer__column footer__column_content_copyright">
                 <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип нижний">
-                <div class="footer__author">&copy; Виктор Абанькин</div>
+                <p class="footer__author">&copy; Виктор Абанькин</p>
             </div>
-            <div class="footer__column footer__column_content-info">
-                <h4 class="footer__column-heading"> О Практикуме </h4>
+            <nav class="footer__column footer__column_content_info">
+              <h5 class="footer__column-heading">О Практикуме </h5>
                 <ul class="footer__column-links">
-                    <li> <a class="footer__column-links" href="#" target="_blank">Главная</a></li>
-                    <li> <a class="footer__column-links" href="#" target="_blank">Концепция</a></li>
-                    <li><a class="footer__column-links" href="#" target="_blank">Наставники</a></li>
+                  <li><a class="footer__column-link" href="#" target="_blank">Главная</a></li>
+                  <li><a class="footer__column-link" href="#" target="_blank">Концепция</a></li>
+                  <li><a class="footer__column-link" href="#" target="_blank">Наставники</a></li>
                 </ul>
-            </div>
-            <div class="footer__column footer__column_content-social">
-                    <h4 class="footer__column-heading"> Соцсети</h4>
-                    <ul class="footer__column-links">
-                        <li><a class="footer__social-icons" href="https://www.youtube.com/@YandexPracticum" target="_blank">
-                          <img class="footer__social-icons" src="./images/youtube-icon.svg" alt="Ютуб"> YouTube</a>
-                        </li>
-                        <li><a class="footer__social-icons" href="https://vk.com/yandex.practicum" target="_blank">
-                          <img class="footer__social-icons" src="./images/vk_color_white.svg" alt="Вконтакте"> ВКонтакте</a>
-                        </li>
-                        <li><a class="footer__social-icons" href="https://www.tiktok.com/discover/%D1%8F%D0%BD%D0%B4%D0%B5%D0%BA%D1%81-%D0%BF%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D1%83%D0%BC" target="_blank">
-                          <img class="footer__social-icons" src="./images/tiktok-icon.svg" alt="ТикТок"> TikTok</a>
-                        </li>
-                    </ul>
-            </div>
+            </nav>
+            <nav class="footer__column footer__column_content_social">
+              <h5 class="footer__column-heading">Соцсети</h5>
+                <ul class="footer__column-links">
+                  <li><a class="footer__column-link" href="https://www.youtube.com/@YandexPracticum" target="_blank">
+                    <img class="footer__social-icon" src="./images/youtube-icon.svg" alt="Ютуб">YouTube</a>
+                  </li>
+                  <li><a class="footer__column-link" href="https://vk.com/yandex.practicum" target="_blank">
+                    <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="Вконтакте">ВКонтакте</a>
+                  </li>
+                  <li><a class="footer__column-link" href="https://www.tiktok.com/discover/%D1%8F%D0%BD%D0%B4%D0%B5%D0%BA%D1%81-%D0%BF%D1%80%D0%B0%D0%BA%D1%82%D0%B8%D0%BA%D1%83%D0%BC" target="_blank">
+                    <img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="ТикТок">TikTok</a>
+                  </li>
+                </ul>
+            </nav>
           </div>
-        </section>
+        </footer>
     </div>
   </body>
 </html>
