--- a/index.html
+++ b/index.html
@@ -95,43 +95,43 @@
           <p class="section-subtitle ">от Джоша Кауфмана</p>
           <div class="kaufman__triangle"></div>
           <div class="table">
-            <div class="table__cell table_cell_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">1</h3>
               <p class="table__text">Число нейронов в мозге человека</p>
             </div>
-            <div class="table__cell table_cell_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">2</h3>
               <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
             </div>
-            <div class="table__cell table_cell_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">3</h3>
               <p class="table__text">Определите целевой уровень мастерства.</p>
             </div>
-            <div class="table__cell table_cell_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">4</h3>
               <p class="table__text">Разбейте навык на элементы.</p>
             </div>
-            <div class="table__cell table_cell_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">5</h3>
               <p class="table__text">Приготовьте всё необходимое для занятий.</p>
             </div>
-            <div class="table__cell table_cell_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">6</h3>
               <p class="table__text">Устраните препятствия для занятий.</p>
             </div>
-            <div class="table__cell table_cell_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">7</h3>
               <p class="table__text">Выделите специальное время для занятий.</p>
             </div>
-            <div class="table__cell table_cell_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">8</h3>
               <p class="table__text">Создайте быстрые петли обратной связи.</p>
             </div> 
-            <div class="table__cell table_cell_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">9</h3>
               <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
             </div> 
-            <div class="table__cell table_cell_theme_dark">
+            <div class="table__cell table__cell_theme_dark">
               <h3 class="table__heading">10</h3>
               <p class="table__text">Уделяйте внимание количеству и скорости.</p>
             </div>
