--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
           <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
           <ul class="video__iframes">
             <li>
-              <iframe class="video__iframe" src="https://youtu.be/5MgBikgcWnY" allowfullscreen></iframe>
+              <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
             <li>
-              <iframe class="video__iframe" src="https://youtu.be/arj7oStGLkU" allowfullscreen></iframe>
+              <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </li>
           </ul>
         </section>
@@ -158,49 +158,49 @@
           </div>
         </section>
         <section class="kaufman">
-          <h2 class="section-title">Принципы обучения</h2>
-          <p class="section-subtitle">от Джоша Кауфмана</p>
+          <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+          <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
           <div class="kaufman__triangle rotation"></div>
           <ul class="table">
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">1</h3>
-              <p class="table__text">Число нейронов в мозге человека</p>
+              <h3 class="table__heading table__heading_theme_dark">1</h3>
+              <p class="table__text table__text_theme_dark">Число нейронов в мозге человека</p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">2</h3>
-              <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+              <h3 class="table__heading table__heading_theme_dark">2</h3>
+              <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">3</h3>
-              <p class="table__text">Определите целевой уровень мастерства.</p>
+              <h3 class="table__heading table__heading_theme_dark">3</h3>
+              <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">4</h3>
-              <p class="table__text">Разбейте навык на элементы.</p>
+              <h3 class="table__heading table__heading_theme_dark">4</h3>
+              <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">5</h3>
-              <p class="table__text">Приготовьте всё необходимое для занятий.</p>
+              <h3 class="table__heading table__heading_theme_dark">5</h3>
+              <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">6</h3>
-              <p class="table__text">Устраните препятствия для занятий.</p>
+              <h3 class="table__heading table__heading_theme_dark">6</h3>
+              <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">7</h3>
-              <p class="table__text">Выделите специальное время для занятий.</p>
+              <h3 class="table__heading table__heading_theme_dark">7</h3>
+              <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
             </li>
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">8</h3>
-              <p class="table__text">Создайте быстрые петли обратной связи.</p>
+              <h3 class="table__heading table__heading_theme_dark">8</h3>
+              <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
             </li> 
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">9</h3>
-              <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+              <h3 class="table__heading table__heading_theme_dark">9</h3>
+              <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
             </li> 
             <li class="table__cell table__cell_theme_dark">
-              <h3 class="table__heading">10</h3>
-              <p class="table__text">Уделяйте внимание количеству и скорости.</p>
+              <h3 class="table__heading table__heading_theme_dark">10</h3>
+              <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </li>
           </ul>
         </section>
