--- a/index.html
+++ b/index.html
@@ -69,14 +69,10 @@
         <section class="video">
           <h2 class="section-title">Видео нa TED</h2>
           <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
-          <ul class="video__iframes">
-            <li>
-              <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allowfullscreen></iframe>
-            </li>
-            <li>
-              <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allowfullscreen></iframe>
-            </li>
-          </ul>
+          <div class="video__iframes">
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allowfullscreen></iframe>
+            <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allowfullscreen></iframe>
+          </div>
         </section>
 
         <section class="oakley" aria-label="две колонки">
@@ -146,9 +142,9 @@
           <div class="khan__container">
             <p class="khan__author">Салман Хан</p>
             <h2 class="khan__title">Весь мир - школа</h2>
-            <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
+            <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру.
               Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить 
-              навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+              навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
             <p class="khan__quote-author">Джордж Лукас</p>
             <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
             <div class="khan__book-container">
